# back-to-office

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  SECURITY.md  install.sh
.github/workflows/: release.yml
docs/: README.md  architecture.md  build-guide.md  claim-code-lifecycle.md  cli-reference.md  config-reference.md  data-flow.md  device-state-machine.md  hosted-api-bootstrap.md  hosted-api-session.md
docs/openapi/: hosted-api.yaml
scripts/: build-release.sh
src/: bto.cpp  p2p_bridge.cpp  p2p_bridge.hpp  p2p_bridge_v2.cpp  p2p_bridge_v2.hpp  peerlinkd_main.cpp
src/cli/: parser.cpp  parser.hpp
src/cloud/: auth_client.cpp  auth_client.hpp  device_client.cpp  device_client.hpp  hosted_http.cpp  hosted_http.hpp  hosted_parse.cpp  hosted_parse.hpp  token_store.cpp  token_store.hpp
src/config/: config.cpp  config.hpp
src/daemon/: channel_handshake.hpp  common.hpp  daemon_client.cpp  daemon_client.hpp  local_endpoint_manager.cpp  local_endpoint_manager.hpp  peerlink_service.cpp  peerlink_service.hpp  session_lifecycle.hpp
src/observability/: error_codes.hpp
src/upgrade/: manifest_client.cpp  manifest_client.hpp  upgrade_client.cpp  upgrade_client.hpp  upgrade_precheck.cpp  upgrade_precheck.hpp
src/util/: io_context_thread.cpp  io_context_thread.hpp  ssh_command.hpp
test/: test_auth_client.cpp  test_channel_handshake.cpp  test_commands.cpp  test_config.cpp  test_hosted_parse.cpp  test_main.cpp  test_manifest_client.cpp  test_observability.cpp  test_parser.cpp  test_session_lifecycle.cpp  test_ssh_command.cpp  test_token_store.cpp
